--- a/gb/25/4/4/n14474420.md
+++ b/gb/25/4/4/n14474420.md
@@ -25,33 +25,32 @@
 <li style="padding-right: 20px;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14442887.md#1" rel="noopener">美缩短续签免面谈期限 H-1B和F-1最受影响</a></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580683.md#1">《霹雳火》演员秦杨张凤书 隔20年同台再交锋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580638.md#1">全球OTT颁奖 台明星云集 林廷忆摘最佳新人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580623.md#1">贝克汉一家乘坐高价游艇游意大利 次子晒度假照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580541.md#1">金钟60主持 Lulu接节目类 曾宝仪负责戏剧类</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588482.md#1">四连血月不寻常？（1）史上最吸睛的例子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587600.md#1">英电视名人拍到UFO：金色光球在空中盘旋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585048.md#1">【未解之谜】悬崖上的黑影 高晓松亲述五台山灵异经历</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气到 养生小心哪些禁忌“补露”怎么补？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14587147.md#1">【未解之谜】1300年的西藏风水局 牵出仓央嘉措的前世秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589535.md#1">【直播】看美网决赛返白宫途中 川普与记者交谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588701.md#1">【时政春秋】习金会密谋什么？中朝策略转型</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590060.md#1">【直播】川普向宗教自由委员会发表讲话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588848.md#1">中共要求路透社下架习谈“活150岁”视频</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588662.md#1">沈舟：点评北京阅兵的“新”武器和仿制品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588193.md#1">空姐揭秘：乘客常犯的9个浪费钱错误</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588643.md#1">赵丽颖缘何走红？香港导演王晶析原因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588969.md#1">肖战为何能主演《藏海传》 郑晓龙透拍摄秘辛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588626.md#1">黄子韬首度公开情定徐艺洋内幕 遭陈乔恩吐槽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588592.md#1">易烊千玺自曝身体吃不消 宣布巡回演唱会收官</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589017.md#1">第82届威尼斯影展落幕 陆女星辛芷蕾夺得影后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589116.md#1">英前警探：车祸时不要说这句话 以免赔大钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588814.md#1">猫也会罹患失智症？ 专家：有8个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589839.md#1">网上流传的“机场理论”挑战 会让你错过航班</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589691.md#1">心理治疗师：压力会传染且影响他人健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588902.md#1">飞越历史与自然 哈德逊河谷热气球节采风</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651974.md#1">【直播】德桑蒂斯在佛罗里达国际大学发表演讲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/4/4/n14474420.htm">签证不保证入境 JFK海关两个月拒三百人入境</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/4/4/n14474420.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
